--- a/_site.yml
+++ b/_site.yml
@@ -1,19 +1,19 @@
 name: "reproducible-website-stack"
 navbar:
-  title: "Reproducible website stack"
+  title: "Birth order IFLS"
   left:
     - text: "Overview"
       href: index.html
     - text: "Data wrangling"
-      href: 1_wrangle_data.html
-    - text: "Descriptives"
-      href: 2_descriptives.html
-    - text: "Analyses"
-      href: 3_analyses.html
+      href: 1_data_import.html
+    - text: "Demographics"
+      href: 2_demographics.html
+    - text: "Preliminary Analyses"
+      href: 3_preliminary_analyses.html
   right:
     - text: ""
       icon: fa-github
-      href: https://github.com/rubenarslan/repro_web_stack
+      href: https://github.com/laurabotzet/birth_order_ifls
 output:
   html_document:
     self_contained: false
