--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "_site"]
 	path = _site
-	url = git@github.com:laurabotzet/birth_order_ifls.git
+	url = https://github.com/laurabotzet/birth_order_ifls.git
