--- a/_site.yml
+++ b/_site.yml
@@ -6,10 +6,10 @@ navbar:
       href: index.html
     - text: "Data wrangling"
       href: 1_data_import.html
+    - text: "Inclusion Process"
+      href: 2_Inclusion.html
     - text: "Demographics"
-      href: 2_demographics.html
-    - text: "Preliminary Analyses"
-      href: 3_preliminary_analyses.html
+      href: 3_sample_analyses.html
     - text: "Analyses"
       href: 4_analyses.html
   right:
